--- a/html/nav.html
+++ b/html/nav.html
@@ -26,13 +26,13 @@
 
   <!-- Mobile Menu -->
   <div class="mobile-menu">
-    <a class="mobile-item" href="home">Accueil</a>
-    <a class="mobile-item" href="project">Projet</a>
-    <a class="mobile-item" href="progress">Avancement</a>
-    <a class="mobile-item" href="news">Actualités</a>
-    <a class="mobile-item" href="team">Équipe</a>
-    <a class="mobile-item" href="engineering">Ingénierie</a>
-    <a class="mobile-item" href="partners">Partenaires</a>
-    <a class="mobile-item" href="faq">FAQ</a>
-  </div>
+   <a class="nav-item" href="index.html">Accueil</a>
+      <a class="nav-item" href="projectpage.html">Projet</a>
+      <a class="nav-item" href="progress.html">Avancement</a>
+      <a class="nav-item" href="news.html">Actualités</a>
+      <a class="nav-item" href="team.html">Équipe</a>
+      <a class="nav-item" href="engineering.html">Ingénierie</a>
+      <a class="nav-item" href="partners.html">Partenaires</a>
+      <a class="nav-item" href="faq.html">FAQ</a>
+    </div>
 </nav>
