--- a/html/faq.html
+++ b/html/faq.html
@@ -22,7 +22,7 @@
   </section>
 <div id="ask-container" class="ask-box">
 
-  <h2>Une question non répondue ? posez la votre</h2>
+  <h2>Une question sans réponse ? Posez la votre</h2>
 
   <input type="text" id="ask-question" placeholder="Écris ta question..." />
 
