--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <title>Redirection</title>
 <script>
   // Redirige automatiquement vers le sous-dossier
-  window.location.href = "./site/index.html"; 
+  window.location.href = "./html/index.html"; 
 </script>
 </head>
 <body>
