--- a/html/partners.html
+++ b/html/partners.html
@@ -65,14 +65,14 @@
     <h2>Nos Partenaires</h2>
     <p>Nous remercions chaleureusement nos partenaires qui nous soutiennent dans cette aventure extraordinaire</p>
     <div class="sponsors-grid">
-      <div class="logo-placeholder">Logo 1</div>
-      <div class="logo-placeholder">Logo 2</div>
-      <div class="logo-placeholder">Logo 3</div>
-      <div class="logo-placeholder">Logo 4</div>
-      <div class="logo-placeholder">Logo 5</div>
-      <div class="logo-placeholder">Logo 6</div>
-      <div class="logo-placeholder">Logo 7</div>
-      <div class="logo-placeholder">Logo 8</div>
+      <div><img class="logo-placeholder" src="../img/metalservice.png" alt="Métal Service"></div>
+      <div><img class="logo-placeholder" src="../img/constelium.png" alt="Constelium"></div>
+      <div><img class="logo-placeholder" src="../img/cathystyle.png" alt="Cathy Style"></div>
+      <div class="logo-placeholder"></div>
+      <div class="logo-placeholder"></div>
+      <div class="logo-placeholder"></div>
+      <div class="logo-placeholder"></div>
+      <div class="logo-placeholder"></div>
     </div>
   </section>
 
