--- a/html/projectpage.html
+++ b/html/projectpage.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Back to the Steam - Projet</title>
 <link rel="stylesheet" href="../css/project.css">
+<link rel="logo" type="../img/logo.jpg" href="image/icon.png">
 </head>
 
  <header>
@@ -28,10 +29,11 @@
     <div class="grid-2">
       <div>
         <h2>Vision</h2>
-        <p>Notre vision est de démontrer qu'innovation et héritage ne sont pas incompatibles...</p>
+        <p>Notre vision est de démontrer qu'innovation et héritage ne sont pas incompatibles. Nous voulons prouver que la beauté mécanique de l'ère vapeur peut inspirer les technologies de demain.</p>
+        <p>Back to the Steam incarne cette philosophie : honorer le passé tout en construisant l'avenir, célébrer l'esthétique intemporelle tout en repoussant les limites techniques.</p>
       </div>
       <div>
-        <img src="https://images.unsplash.com/photo-1667149226829-d24fba50b536?crop=entropy&cs=tinysrgb&fit=max&fm=jpg" alt="Vision" class="img-cover">
+        <img src="../img/achanger(ou pas).jpg" alt="Vision" class="img-cover">
       </div>
     </div>
   </section>
@@ -40,11 +42,14 @@
   <section class="section">
     <div class="grid-2">
       <div>
-        <img src="https://images.unsplash.com/photo-1581091212911-f4efc3f71c48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg" alt="Inspiration" class="img-cover">
+        <img src="../img/achanger(ou pas)2.jpg" alt="Inspiration" class="img-cover">
       </div>
       <div>
         <h2>Inspiration</h2>
-        <p>Notre inspiration principale vient de la locomotive 141R...</p>
+        <p>Notre inspiration principale vient de la locomotive 141R, symbole d'excellence mécanique et de puissance brute. Cette machine légendaire représente l'apogée de l'ingénierie ferroviaire à vapeur.</p>
+        <li><h3>L'esthétique Steampunk</h3><p>Un univers où mécanismes apparents, laiton poli et vapeur se mêlent dans une danse visuelle captivante</p></li>
+        <li><h3>Back to the Future</h3><p>L'esprit de la saga culte : voyager dans le temps, défier les conventions, créer l'impossible</p></li>
+        <li><h3>L'ingénierie d'excellence</h3><p>La rigueur technique des grandes réalisations mécaniques du XXe siècle</p></li>
       </div>
     </div>
   </section>
