--- a/html/engineering.html
+++ b/html/engineering.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ingénierie - Back to the Steam</title>
   <link rel="stylesheet" href="../css/engineering.css">
+  <link rel="logo" type="../img/logo.jpg" href="image/icon.png">
 </head>
 <body>
  <header>
