--- a/html/faq.html
+++ b/html/faq.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ - Back to the Steam</title>
   <link rel="stylesheet" href="../css/faq.css">
+  <link rel="logo" type="../img/logo.jpg" href="image/icon.png">
 </head>
 <body>
 <header>
