--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Back to the Steam</title>
   <link rel="stylesheet" href="../css/style1.css"> <!-- <-- Ici le CSS -->
+  <link rel="logo" type="../img/logo.jpg" href="image/icon.png">
 </head>
 <body>
   <header>
