--- a/html/news.html
+++ b/html/news.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/news.css">
   <!-- Lucide Icons CDN -->
   <script src="https://cdn.jsdelivr.net/npm/lucide@0.255.0/dist/lucide.min.js"></script>
+  <link rel="logo" type="../img/logo.jpg" href="image/icon.png">
 </head>
 <body>
     <header>
