--- a/html/progress.html
+++ b/html/progress.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Back to the Steam - Avancement</title>
   <link rel="stylesheet" href="../css/progress.css">
+  <link rel="logo" type="../img/logo.jpg" href="image/icon.png">
 </head>
 
 <body>
