--- a/html/projectpage.html
+++ b/html/projectpage.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Back to the Steam - Projet</title>
 <link rel="stylesheet" href="../css/project.css">
-<link rel="logo" type="../img/logo.jpg" href="image/icon.png">
+ <link rel="icon" type="image/jpg" href="../img/logo.jpg">
 </head>
 
  <header>
