--- a/html/team.html
+++ b/html/team.html
@@ -29,8 +29,8 @@
         <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop" alt="Enzo Lombard" class="team-image">
         <div class="team-content">
           <h3>Enzo Lombard</h3>
-          <div class="team-role">Chef de Projet</div>
-          <p>Coordination de l'équipe et gestion globale du projet</p>
+          <div class="team-role">Chef de Projet & Ingénieur dans les systèmes numériques</div>
+          <p>Coordination de l'équipe et gestion globale du projet spécialiser dans le numérique</p>
         </div>
       </div>
 
@@ -38,8 +38,8 @@
         <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=400&h=400&fit=crop" alt="Molly Speitel" class="team-image">
         <div class="team-content">
           <h3>Molly Speitel</h3>
-          <div class="team-role">Community Manager</div>
-          <p>Responsable de la communication et des réseaux sociaux</p>
+          <div class="team-role">responsable de la communication et des sponsorings</div>
+          <p>Responsable de la communication et des réseaux sociaux et du budget</p>
         </div>
       </div>
 
@@ -47,8 +47,8 @@
         <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=400&h=400&fit=crop" alt="Manon Wagner-Marschall" class="team-image">
         <div class="team-content">
           <h3>Manon Wagner-Marschall</h3>
-          <div class="team-role">Comptable</div>
-          <p>Gestion financière et budget du projet</p>
+          <div class="team-role">Ingénieure fabrication/essais</div>
+          <p>Gestion de la création et des test du projet</p>
         </div>
       </div>
 
@@ -56,8 +56,8 @@
         <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&h=400&fit=crop" alt="Mathéo Henry" class="team-image">
         <div class="team-content">
           <h3>Mathéo Henry</h3>
-          <div class="team-role">Responsable Stand</div>
-          <p>Conception et gestion du stand de présentation</p>
+          <div class="team-role">Ingénieur style/design</div>
+          <p>Conception des différents aspect graphiques du projet</p>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
         <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop" alt="Alexandre Schoetel" class="team-image">
         <div class="team-content">
           <h3>Alexandre Schoetel</h3>
-          <div class="team-role">Ingénierie</div>
+          <div class="team-role">Ingénieur Conception</div>
           <p>Conception technique et développement du véhicule</p>
         </div>
       </div>
