--- a/html/team.html
+++ b/html/team.html
@@ -26,7 +26,7 @@
     <section class="team-grid" >
       
       <div class="team-card">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop" alt="Enzo Lombard" class="team-image">
+        <img src="../img/enzo.jpeg" alt="Enzo Lombard" class="team-image">
         <div class="team-content">
           <h3>Enzo Lombard</h3>
           <div class="team-role">Chef de Projet & Ingénieur dans les systèmes numériques</div>
@@ -62,7 +62,7 @@
       </div>
 
       <div class="team-card">
-        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=400&h=400&fit=crop" alt="Alexandre Schoetel" class="team-image">
+        <img src="../img/alexandre.jpeg" alt="Alexandre Schoetel" class="team-image">
         <div class="team-content">
           <h3>Alexandre Schoetel</h3>
           <div class="team-role">Ingénieur Conception</div>
