--- a/html/team.html
+++ b/html/team.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="team-card">
-        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=400&h=400&fit=crop" alt="Molly Speitel" class="team-image">
+        <img src="../img/molly.jpeg" alt="Molly Speitel" class="team-image">
         <div class="team-content">
           <h3>Molly Speitel</h3>
           <div class="team-role">responsable de la communication et des sponsorings</div>
@@ -44,7 +44,7 @@
       </div>
 
       <div class="team-card">
-        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=400&h=400&fit=crop" alt="Manon Wagner-Marschall" class="team-image">
+        <img src="../img/manon.jpeg" alt="Manon Wagner-Marschall" class="team-image">
         <div class="team-content">
           <h3>Manon Wagner-Marschall</h3>
           <div class="team-role">Ingénieure fabrication/essais</div>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="team-card">
-        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&h=400&fit=crop" alt="Mathéo Henry" class="team-image">
+        <img src="../img/matéo.jpeg" alt="Mathéo Henry" class="team-image">
         <div class="team-content">
           <h3>Mathéo Henry</h3>
           <div class="team-role">Ingénieur style/design</div>
