--- a/html/engineering.html
+++ b/html/engineering.html
@@ -16,7 +16,7 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-content">
-        <h1>Ingénierie</h1>
+        <h1>Ingénierie et Fabrication</h1>
         <p>La rigueur technique au service d'une vision audacieuse</p>
       </div>
     </section>
@@ -29,29 +29,38 @@
     <!-- Technical Pillars -->
     <section class="pillars grid">
       <div class="pillar">
+        <a id=1>
         <div class="pillar-icon blue"><span>⚙️</span></div>
         <h3>Mécanique</h3>
         <p>Conception robuste et précise des systèmes de transmission et de propulsion</p>
+        </a>
       </div>
       <div class="pillar">
+        <a id=2>
         <div class="pillar-icon green"><span>💨</span></div>
         <h3>Aérodynamique</h3>
         <p>Optimisation des flux d'air pour maximiser la vitesse et la stabilité</p>
+        </a>
+      </div>
+        <div class="pillar">
+        <a id=3>
+        <div class="pillar-icon orange"><span>⚡</span></div>
+        <h3>Notre Approche Technique</h3>
+        <p>Solutions créatives pour repousser les limites de la performance</p>
+        </a>
       </div>
       <div class="pillar">
+        <a id=4>
         <div class="pillar-icon purple"><span>🔧</span></div>
         <h3>Fabrication</h3>
         <p>Techniques modernes incluant l'impression 3D et l'usinage de précision</p>
+        </a>
       </div>
-      <div class="pillar">
-        <div class="pillar-icon orange"><span>⚡</span></div>
-        <h3>Innovation</h3>
-        <p>Solutions créatives pour repousser les limites de la performance</p>
-      </div>
+    
     </section>
 
     <!-- Mechanical Design -->
-    <section class="design grid">
+    <section class="design grid" id="1a">
       <div class="design-text">
         <h2>Conception Mécanique</h2>
         <p>Notre système mécanique est conçu pour offrir un équilibre optimal entre légèreté, robustesse et efficacité. Chaque pièce est étudiée pour minimiser les frottements et maximiser la transmission de puissance.</p>
@@ -62,12 +71,12 @@
         </ul>
       </div>
       <div class="design-image">
-        <img src="https://images.unsplash.com/photo-1727522974614-b592018e49e1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxtZWNoYW5pY2FsJTIwZW5naW5lZXJpbmclMjBibHVlcHJpbnRzfGVufDF8fHx8MTc2NDE1NzI5N3ww&ixlib=rb-4.1.0&q=80&w=1080" alt="Engineering Design">
+        <img src="../img/plan.JPG" alt="Engineering Design">
       </div>
     </section>
 
     <!-- Aerodynamics -->
-    <section class="design grid reverse">
+    <section class="design grid reverse" id="2a">
       <div class="design-text">
         <h2>Aérodynamique</h2>
         <p>L'aérodynamique est au cœur de notre conception. Inspirés par les formes arrondies des locomotives à vapeur, nous avons développé une carrosserie qui minimise la traînée tout en conservant notre identité visuelle rétrofuturiste.</p>
@@ -83,7 +92,7 @@
     </section>
 
     <!-- Technical Approach -->
-    <section class="approach">
+    <section class="approach"id="3a">
       <h2>Notre Approche Technique</h2>
       <div class="approach-grid">
         <div>
@@ -106,7 +115,7 @@
     </section>
 
     <!-- Skills & Tools -->
-    <section class="skills">
+    <section class="skills" >
       <h2>Compétences & Outils</h2>
       <div class="skills-grid">
         <div class="skill-card">
@@ -133,6 +142,56 @@
             <span>Capteurs</span>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- FABRICATION -->
+     <section class="skills" id="4a"><h2>Fabrication</h2></section>
+
+      <!-- 3D PRINT -->
+    <section class="design grid">
+      <div class="design-text">
+        <h2>L'impression tridimensionnelle</h2>
+        <p>Processus de fabrication par dépot de plastique ou polymérisation de résine réalisant des objet en trois dimension</p>
+        <ul>
+          <li>▸ Extrusion du filament</li>
+          <li>▸ Fonte du filament</li>
+          <li>▸ Dépose du filament</li>
+        </ul>
+      </div>
+      <div class="fabrication-image">
+        <img src="../img/3Dprint.JPG" alt="schéma imprimante 3D">
+      </div>
+    </section>
+
+    <!-- LASER CUTTER -->
+    <section class="design grid reverse">
+      <div class="design-text">
+        <h2>Découpeuse à laser</h2>
+        <p>technologie de découpe par laser lumineux qui sublime la matière (état solide à gazeux).</p>
+        <ul>
+          <li>▸ Diode ElectroLuminescente qui est la source de lumière</li>
+          <li>▸ Miroir redirigeant le faisseau lumineux</li>
+          <li>▸ Lentille focalisant le faisseaux sur un point précis</li>
+        </ul>
+      </div>
+      <div class="fabrication-image">
+        <img src="../img/lasercut.JPG" alt="Aerodynamic Design">
+      </div>
+    </section>
+      <!-- INJECTION PRESS -->
+    <section class="design grid">
+      <div class="design-text">
+        <h2>L'injection plastique</h2>
+        <p>Processus de fabrication par injection de plastique fondu dans un moule</p>
+        <ul>
+          <li>▸ Fonte du plastique</li>
+          <li>▸ Pressage du plastique fondu</li>
+          <li>▸ Éjection du plastique dans le moule</li>
+        </ul>
+      </div>
+      <div class="fabrication-image">
+        <img src="../img/injectionpress.JPG" alt="schéma imprimante 3D">
       </div>
     </section>
 
