--- a/html/nav.html
+++ b/html/nav.html
@@ -15,7 +15,7 @@
       <a class="nav-item" href="progress.html">Avancement</a>
       <a class="nav-item" href="news.html">Actualités</a>
       <a class="nav-item" href="team.html">Équipe</a>
-      <a class="nav-item" href="engineering.html">Ingénierie</a>
+      <a class="nav-item" href="engineering.html">Ingénierie/Fabrication</a>
       <a class="nav-item" href="partners.html">Partenaires</a>
       <a class="nav-item" href="faq.html">FAQ</a>
     </div>
@@ -31,7 +31,7 @@
       <a class="nav-item" href="progress.html">Avancement</a>
       <a class="nav-item" href="news.html">Actualités</a>
       <a class="nav-item" href="team.html">Équipe</a>
-      <a class="nav-item" href="engineering.html">Ingénierie</a>
+      <a class="nav-item" href="engineering.html">Ingénierie/Fabrication</a>
       <a class="nav-item" href="partners.html">Partenaires</a>
       <a class="nav-item" href="faq.html">FAQ</a>
     </div>
