--- a/html/partners.html
+++ b/html/partners.html
@@ -84,7 +84,7 @@
       <div class="contact-card">
         <div class="icon blue">📧</div>
         <h3>Email</h3>
-        <p>contact@backtothesteam.fr</p>
+        <p>back.to.the.steam.1990@gmail.com</p>
       </div>
       <div class="contact-card">
         <div class="icon purple">📍</div>
