--- a/html/engineering.html
+++ b/html/engineering.html
@@ -151,8 +151,8 @@
       <!-- 3D PRINT -->
     <section class="design grid">
       <div class="design-text">
-        <h2>L'impression tridimensionnelle</h2>
-        <p>Processus de fabrication par dépot de plastique ou polymérisation de résine réalisant des objet en trois dimension</p>
+        <h2>L'impression tridimensionnelle a dépot de filament</h2>
+        <p>Processus de fabrication par dépot de plastique réalisant des objet en trois dimension</p>
         <ul>
           <li>▸ Extrusion du filament</li>
           <li>▸ Fonte du filament</li>
@@ -176,7 +176,7 @@
         </ul>
       </div>
       <div class="fabrication-image">
-        <img src="../img/lasercut.JPG" alt="Aerodynamic Design">
+        <img src="../img/lasercut.JPG" alt="schéma découpe laser">
       </div>
     </section>
       <!-- INJECTION PRESS -->
@@ -191,10 +191,23 @@
         </ul>
       </div>
       <div class="fabrication-image">
-        <img src="../img/injectionpress.JPG" alt="schéma imprimante 3D">
+        <img src="../img/injectionpress.JPG" alt="schéma injection plastique">
       </div>
     </section>
-
+ <section class="design grid reverse">
+      <div class="design-text">
+        <h2>L'impression tridimensionnelle à polymérisation de résine</h2>
+        <p>Processus de fabrication par polymérisation de résine permettant la création d'objet en trois dimension précis</p>
+        <ul>
+          <li>▸ écran qui est la source de lumière</li>
+          <li>▸ Miroir redirigeant les faisseaux lumineux</li>
+          <li>▸ Polymérisation de la résine sur le plateau</li>
+        </ul>
+      </div>
+      <div class="fabrication-image">
+        <img src="../img/resin3DPRINT.JPG" alt="schéma imprimante 3D résine">
+      </div>
+    </section>
   </main>
 <script src="../js/main.js"></script>
 </body>
