--- a/html/engineering.html
+++ b/html/engineering.html
@@ -38,8 +38,8 @@
       <div class="pillar">
         <a id=2>
         <div class="pillar-icon green"><span>💨</span></div>
-        <h3>Aérodynamique</h3>
-        <p>Optimisation des flux d'air pour maximiser la vitesse et la stabilité</p>
+        <h3>Écologie</h3>
+        <p>Optimisation écologique pour le développement durable</p>
         </a>
       </div>
         <div class="pillar">
@@ -78,12 +78,12 @@
     <!-- Aerodynamics -->
     <section class="design grid reverse" id="2a">
       <div class="design-text">
-        <h2>Aérodynamique</h2>
-        <p>L'aérodynamique est au cœur de notre conception. Inspirés par les formes arrondies des locomotives à vapeur, nous avons développé une carrosserie qui minimise la traînée tout en conservant notre identité visuelle rétrofuturiste.</p>
+        <h2>Écologie</h2>
+        <p>L'optimisation écologique est au cœur de notre conception..</p>
         <ul>
-          <li>▸ Profil étudié pour réduire la résistance à l'air</li>
-          <li>▸ Gestion des flux d'air autour et à travers le véhicule</li>
-          <li>▸ Design qui allie esthétique et performance aérodynamique</li>
+          <li>▸ Matériaux biosourcés</li>
+          <li>▸ Recyclage d'ancien matériaux</li>
+          <li>▸ Déplacement en train </li>
         </ul>
       </div>
       <div class="design-image">
