--- a/html/partners.html
+++ b/html/partners.html
@@ -69,7 +69,7 @@
       <div><img class="logo-placeholder" src="../img/metalservice.png" alt="Métal Service"></div>
       <div><img class="logo-placeholder" src="../img/constelium.png" alt="Constelium"></div>
       <div><img class="logo-placeholder" src="../img/cathystyle.png" alt="Cathy Style"></div>
-      <div class="logo-placeholder"></div>
+      <div><img class="logo-placeholder" src="../img/stepperonline.JPG" alt="Stepper Online"></div>
       <div class="logo-placeholder"></div>
       <div class="logo-placeholder"></div>
       <div class="logo-placeholder"></div>
