--- a/html/engineering.html
+++ b/html/engineering.html
@@ -37,7 +37,7 @@
       </div>
       <div class="pillar">
         <a id=2>
-        <div class="pillar-icon green"><span>💨</span></div>
+        <div class="pillar-icon green"><span>🍃</span></div>
         <h3>Écologie</h3>
         <p>Optimisation écologique pour le développement durable</p>
         </a>
