--- a/html/team.html
+++ b/html/team.html
@@ -17,7 +17,8 @@
     <div class="hero-container">
     <h1 class="hero-title">NOTRE ÉQUIPE</h1>
     <p class="hero-subtitle">Une équipe pluridisciplinaire d'experts passionnés par l'innovation et l'ingénierie de pointe</p>
-    </div></div>
+  <p></p>    <p></p>   <p></p>   <p></p>   <p></p>
+  </div></div>
   
  
 
@@ -26,7 +27,7 @@
     <section class="team-grid" >
       
       <div class="team-card">
-        <img src="../img/enzo.jpeg" alt="Enzo Lombard" class="team-image">
+        <img src="../img/enzo.JPG" alt="Enzo Lombard" class="team-image">
         <div class="team-content">
           <h3>Enzo Lombard</h3>
           <div class="team-role">Chef de Projet & Ingénieur dans les systèmes numériques</div>
@@ -35,7 +36,7 @@
       </div>
 
       <div class="team-card">
-        <img src="../img/molly.jpeg" alt="Molly Speitel" class="team-image">
+        <img src="../img/molly.JPG" alt="Molly Speitel" class="team-image">
         <div class="team-content">
           <h3>Molly Speitel</h3>
           <div class="team-role">responsable de la communication et des sponsorings</div>
@@ -44,7 +45,7 @@
       </div>
 
       <div class="team-card">
-        <img src="../img/manon.jpeg" alt="Manon Wagner-Marschall" class="team-image">
+        <img src="../img/manon.JPG" alt="Manon Wagner-Marschall" class="team-image">
         <div class="team-content">
           <h3>Manon Wagner-Marschall</h3>
           <div class="team-role">Ingénieure fabrication/essais</div>
@@ -53,7 +54,7 @@
       </div>
 
       <div class="team-card">
-        <img src="../img/matéo.jpeg" alt="Mathéo Henry" class="team-image">
+        <img src="../img/matéo.JPG" alt="Mathéo Henry" class="team-image">
         <div class="team-content">
           <h3>Mathéo Henry</h3>
           <div class="team-role">Ingénieur style/design</div>
@@ -62,11 +63,19 @@
       </div>
 
       <div class="team-card">
-        <img src="../img/alexandre.jpeg" alt="Alexandre Schoetel" class="team-image">
+        <img src="../img/alexandre.JPG" alt="Alexandre Schoetel" class="team-image">
         <div class="team-content">
           <h3>Alexandre Schoetel</h3>
           <div class="team-role">Ingénieur Conception</div>
           <p>Conception technique et développement du véhicule</p>
+        </div>
+      </div>
+      <div class="team-card">
+        <img src="../img/william.JPG" alt="William Lefebvre" class="team-image">
+        <div class="team-content">
+          <h3>William Lefebvre</h3>
+          <div class="team-role">Parrain</div>
+          <p>Aide pour tous les aspects du projet</p>
         </div>
       </div>
 
