--- a/html/team.html
+++ b/html/team.html
@@ -13,11 +13,11 @@
   </header>
   <main>
     <!-- Hero Section -->
-     <div class="hero-section"> 
+     <div class="hero-section">
+       <img src="../img/team.JPG" alt="Team"> 
     <div class="hero-container">
     <h1 class="hero-title">NOTRE ÉQUIPE</h1>
     <p class="hero-subtitle">Une équipe pluridisciplinaire d'experts passionnés par l'innovation et l'ingénierie de pointe</p>
-  <p></p>    <p></p>   <p></p>   <p></p>   <p></p>
   </div></div>
   
  
