--- a/html/team.html
+++ b/html/team.html
@@ -73,7 +73,7 @@
       <div class="team-card">
         <img src="../img/william.JPG" alt="William Lefebvre" class="team-image">
         <div class="team-content">
-          <h3>William Lefebvre</h3>
+          <h3>William Lévêque</h3>
           <div class="team-role">Parrain</div>
           <p>Aide pour tous les aspects du projet</p>
         </div>
