--- a/html/partners.html
+++ b/html/partners.html
@@ -70,7 +70,7 @@
       <div><img class="logo-placeholder" src="../img/constelium.png" alt="Constelium"></div>
       <div><img class="logo-placeholder" src="../img/cathystyle.png" alt="Cathy Style"></div>
       <div><img class="logo-placeholder" src="../img/stepperonline.JPG" alt="Stepper Online"></div>
-      <div class="logo-placeholder"></div>
+      <div><img class="logo-placeholder" src="../img/freva.PNG" alt="Freva"></div>
       <div class="logo-placeholder"></div>
       <div class="logo-placeholder"></div>
       <div class="logo-placeholder"></div>
