--- a/html/engineering.html
+++ b/html/engineering.html
@@ -151,8 +151,8 @@
       <!-- 3D PRINT -->
     <section class="design grid">
       <div class="design-text">
-        <h2>L'impression tridimensionnelle a dépot de filament</h2>
-        <p>Processus de fabrication par dépot de plastique réalisant des objet en trois dimension</p>
+        <h2>L'impression tridimensionnelle à dépot de filament</h2>
+        <p>Processus de fabrication par dépot de plastique réalisant des objets en trois dimensions</p>
         <ul>
           <li>▸ Extrusion du filament</li>
           <li>▸ Fonte du filament</li>
@@ -168,7 +168,7 @@
     <section class="design grid reverse">
       <div class="design-text">
         <h2>Découpeuse à laser</h2>
-        <p>technologie de découpe par laser lumineux qui sublime la matière (état solide à gazeux).</p>
+        <p>Technologie de découpe par laser lumineux qui sublime la matière (état solide à gazeux).</p>
         <ul>
           <li>▸ Diode ElectroLuminescente qui est la source de lumière</li>
           <li>▸ Miroir redirigeant le faisseau lumineux</li>
@@ -197,7 +197,7 @@
  <section class="design grid reverse">
       <div class="design-text">
         <h2>L'impression tridimensionnelle à polymérisation de résine</h2>
-        <p>Processus de fabrication par polymérisation de résine permettant la création d'objet en trois dimension précis</p>
+        <p>Processus de fabrication par polymérisation de résine permettant la création d'objet en trois dimensions de manière précise</p>
         <ul>
           <li>▸ écran qui est la source de lumière</li>
           <li>▸ Miroir redirigeant les faisseaux lumineux</li>
