--- a/html/team.html
+++ b/html/team.html
@@ -39,7 +39,7 @@
         <img src="../img/molly.JPG" alt="Molly Speitel" class="team-image">
         <div class="team-content">
           <h3>Molly Speitel</h3>
-          <div class="team-role">responsable de la communication et des sponsorings</div>
+          <div class="team-role">Responsable de la communication et des sponsorings</div>
           <p>Responsable de la communication et des réseaux sociaux et du budget</p>
         </div>
       </div>
