--- a/html/projectpage.html
+++ b/html/projectpage.html
@@ -42,7 +42,7 @@
   <section class="section">
     <div class="grid-2">
       <div>
-        <img src="../img/achanger(ou pas)2.jpg" alt="Inspiration" class="img-cover">
+        <img src="../img/WIP.JPG" alt="Inspiration" class="img-cover">
       </div>
       <div>
         <h2>Inspiration</h2>
